--- a/ThreeJS/Other/solar-system.html
+++ b/ThreeJS/Other/solar-system.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="css/common.css">
 </head>
 <body>
-<script src="js/Three.js"></script>
-<script src="js/OrbitControls.js"></script>
-<script src="js/Stats.js"></script>
+<script src="js/libs/three.js"></script>
+<script src="js/libs/orbitControls.js"></script>
+<script src="js/libs/stats.js"></script>
 <script src="js/solar-system.js"></script>
 </body>
 </html>
